Issue #19296: Silence compiler warning in dbm_open. Some dbm header files declare the first argument as char * instead of a const char *.